# folderlib

./: .editorconfig  README.rst  setup.cfg  setup.py  tox.ini
folderlib/: __init__.py  cli.py
folderlib/data/: __init__.py  excluded.py  supported.py
folderlib/exceptions/: __init__.py
folderlib/tests/: test_cleaner.py  test_cli.py  test_lint.py
folderlib/tests/config/: files_options.ini  logging_config.ini
folderlib/utilities/: __init__.py  logging.py  typing.py
folderlib/workers/: __init__.py  base.py  cleaner.py  populator.py
